--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
+    "pickleparser": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
