--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.383.0",
     "mongoose": "^8.4.1",
+    "msgpackr": "^1.10.2",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
+    "pickle": "^0.2.0",
+    "picklejs": "^0.101.0",
     "pickleparser": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
