"change logs and tailwindconfig-color"

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.383.0",
     "mongoose": "^8.4.1",
@@ -35,6 +36,7 @@
     "picklejs": "^0.101.0",
     "pickleparser": "^0.2.1",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
