--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/winston": "^2.4.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
